# sheepbot

./: .dockerignore  .env.example  .env_example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml
config/: default.toml  development.toml  example.toml
lavalink/: application.yml
migrations/: 20201016231711_add_only_link_channel.sql  20201016235905_add_config_and_prefixes.sql  20201017010029_change_only_links_fields.sql  20210922060329_add_botinfo_table.sql  20211025052843_add_tracker_infos.sql  20211025063428_add_timezone_to_tracker.sql  20211027041340_change_timestamp_to_datetime.sql  20211027050136_back_timezone_normal.sql
src/: handler.rs  main.rs  models.rs  settings.rs
src/commands/: fun.rs  mod.rs  music.rs  setup.rs  tracker.rs  voice.rs
src/helpers/: command_utils.rs  database_helper.rs  mod.rs  permissions_helper.rs  start_loops.rs  voice_utils.rs
src/models/: core.rs  mod.rs  tracker.rs
src/structures/: cmd_data.rs  errors.rs  mod.rs
src/utils/: database.rs  message.rs  mod.rs  setup.rs
