[package]
name = "sheepbot"
version = "0.1.0"
authors = ["Luca <lucalacerda1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.7.3"
tracing = "0.1"
tracing-subscriber = "0.2"
lavalink-rs = "0.2.0-alpha"

[dependencies.serenity]
version = "0.9.0-rc.2"
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]

[dependencies.tokio]
version = "0.2.22"
features = ["macros"]
