[package]
name = "sheepbot"
version = "0.1.0"
authors = ["Luca <lucalacerda1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tracing = "0.1"
tracing-subscriber = "0.2"
qrcode = "0.12"
image = "0.23.10"
anyhow = "1.0.33"
config = "0.10.1"
serde = "1.0.117"
serde_derive = "1.0.117"
futures = "0.3"
url = "2.2.0"

[dependencies.serenity]
version = "0.10.9"
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]

[dependencies.tokio]
version = "1.12.0"
features = ["macros", "time"]

[dependencies.lexical-core]
optional = true
version = ">= 0.6, < 0.8"

[dependencies.lavalink-rs]
version = "0.9.0-rc.0"
features = ["rustls", "serenity"]

[dependencies.songbird]
version = "0.2.0"
features = ["gateway", "serenity-rustls"]

[dependencies.sqlx]
default-features = false
version = "0.5.6"
features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid" ]